bulk adc read support w/ USB post-retrieval

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -11,12 +11,14 @@
       "scripts": [ "background.js" ]
     }
   },
-  "permissions": [ 
+  "permissions": [
+    "gcm",
     "hid", {
       "usbDevices":
         [ { "vendorId": 4617, 
             "productId": 1 } ]
       },
+    "management",
     "system.display"
   ]
 }
