clean-up directories

--- a/simulation/.gitignore
+++ b/simulation/.gitignore
@@ -1,5 +1,14 @@
 # Any backup files for Blender
-*.blend*
+*.blend1
+*.blend2
+*.blend3
+*.blend4
+*.blend4
+*.blend5
+*.blend6
+*.blend7
+*.blend8
+*.blend9
 
 # Any backup files for Sketchup
 *.skb
